# transcription

./: .dockerignore  .env.example  .flashignore  .gitignore  .transcription.pid  ARCHITECTURE.md  AUDIT_REPORT.md  Dockerfile  Makefile  README.md  RUNPOD_ENV_SETUP.md  _pod_details.md  agent_transcription.json  agent_transcription.md  docker-compose.yml  improve_project.md  information_for_env.md  install  patch_script.sh  patch_test.py  pyproject.toml  requirements.txt  run.sh  runpod_client_example.js  runpod_client_example.py  sa-pinocchio.md  setup_runpod_endpoint.sh  smoke_test_mcp.py  start.sh  stop.sh
.github/: README.md  copilot-instructions.md
.github/agents/: awareness-IBSCO-PCP-Agent.agent.md  (+7 more)
.github/docs/: MODEL_GUIDE.md
.hf/: HuggingFaceLogIn.md  PyannoteUse.md
deploy/: pinocchio.service
docs/: REFERENCE_GUIDED_TRANSCRIPTION.md  RUNPOD_POD_TEMPLATE.md  awareness-forensic-transcription-agent.agent.md  mcp-servers.example.json
examples/: runpod_client_example.js
mcp/: MCP_ARCHITECTURE.md  MCP_BOOTSTRAP_STANDARD.md  MCP_READINESS_REPORT.md  README.md  generate_readiness_report.py  mcpServers.example.json
scripts/: audit_all_transcripts.py  batch_transcribe.py  bootstrap_la8159_references.py  bootstrap_runpod_pod.sh  cleanup_references.py  identify_speakers.py  import_raw_transcripts.py  inspect_transcripts.py  organize_references.py  setup_github_runpod.sh  sync_raw_to_references.py
src/: composition.py  config.py  logging_setup.py  main.py  runpod_handler.py
templates/: curadoria.html  pinocchio.html  revision.html
tests/: smoke_test_mcp.py
(+327 files in other folders)
